--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "yup": "^0.32.9"
   },
@@ -48,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^18.0.4",
+    "@types/styled-components": "^5.1.25",
     "json-server": "^0.16.3"
   }
 }
